# pymif

./: .buildinfo  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.html  README.md  api_reference.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: README.doctree  api_reference.doctree  environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.github/workflows/: docker-publish.yml  documentation.yml  sphinx.yml  tests.yml
_sources/: README.md.txt  index.rst.txt
_sources/autoapi/: index.rst.txt
_static/: documentation_options.js
autoapi/: index.html
autoapi/pymif/: index.html
doc/: README.md  api_reference.rst  conf.py  index.rst
docs/: conf.py
docs/source/: conf.py  index.rst  modules.rst  pymif.microscope_manager.rst  pymif.microscope_manager.utils.rst  pymif.rst  tests.rst
documentation/: Thumbs.db  instructions_for_gif.txt
examples/: 00_installation_and_mental_model.ipynb  01_read_microscope_datasets_templates.ipynb  02_array_manager_from_numpy_dask.ipynb  03_create_ome_zarr_with_metadata.ipynb  04_read_zarr_inspect_groups_labels.ipynb  05_add_groups_and_write_image_regions.ipynb  06_labels_append_inside_existing_zarr.ipynb  07_create_new_zarr_dataset_with_labels.ipynb  08_metadata_subset_pyramid_and_channels.ipynb  09_legacy_options_v04_and_troubleshooting.ipynb  README.md  batch_convert.py  convert_batch.py  convert_cli.py  convert_database_linux.txt  convert_database_windows.txt  example_array.ipynb  example_create_empty_zarr.ipynb  example_luxendo.ipynb  example_opera.ipynb  example_update_zarr.ipynb  example_viventis.ipynb  example_zarr.ipynb  example_zeiss.ipynb  manifest.json
examples/old_examples/: database_batch_convert.csv  example_array.ipynb  example_create_empty_zarr.ipynb  example_luxendo.ipynb  example_scape.ipynb  example_viventis.ipynb  example_zarrmanager_axis_aware.ipynb  example_zeiss.ipynb
examples/test_v04_v05/: 01_zarr_convert_v04.ipynb  02_add_group_v04.ipynb  04_zarr_read_v05.ipynb  05_test_v05.ipynb
microscope_manager/: array_manager.py  microscope_manager.py  requirements.txt  setup.py  zarr_manager.py  zeiss_manager.py
microscope_manager/microscope_manager/: luxendo_manager.py  microscope_manager.py  viventis_manager.py  zarr_manager.py
microscope_manager/tests/: test_luxendo_manager.py  test_zarr_manager.py
microscope_manager/utils/: visualize.py  write.py
pymif/: .gitignore  README.md  __init__.py  setup.py
pymif/animations/: __init__.py
pymif/cell_detection/: _cell_local_max.py  _cells_on_unit_sphere.py  _compute_cell_fluo_box.py
pymif_old/: __init__.py
tests/: conftest.py  test_anisotropic_downsampling.py  test_array_manager.py  test_luxendo_manager.py  test_viventis_manager.py  test_zarr_axis_aware.py  test_zarr_discovery.py  test_zarr_empty_creation.py  test_zarr_manager.py  test_zarr_read_write.py  test_zarr_region_write.py
zarr_converter/: requirements.txt  setup.py
(+213 files in other folders)
